--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
             <h2>My Skills</h2>
         </div>
         <div class="subtext">
-            <img class="monkey" src="./images/monkey.gif" alt="monkey typing">
+            <img class="monkey" src="./monkey.gif" alt="monkey typing">
             <p class="skills">I started to learn how to code using Java in highschool, but didn't touch programming until after finishing my Biochemistry degree. Now I've created projects using Java, C, Python, and now HTML and CSS.</p>
             <br>
             <img class="salt" src="./images/salt.jpg">
